@@ -18,13 +18,14 @@
  */
 
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2026, Oracle and/or its affiliates. All rights reserved.
  * Portions Copyright (c) 2020, Chris Fraire <cfraire@me.com>.
  */
 package org.opengrok.web.api.v1.controller;
 
 import jakarta.ws.rs.core.Application;
 import jakarta.ws.rs.core.GenericType;
+import jakarta.ws.rs.core.Response;
 import org.glassfish.jersey.server.ResourceConfig;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -34,11 +35,13 @@ import org.opengrok.indexer.history.HistoryGuru;
 import org.opengrok.indexer.history.RepositoryFactory;
 import org.opengrok.indexer.index.Indexer;
 import org.opengrok.indexer.util.TestRepository;
+import org.opengrok.web.api.v1.filter.CorsFilter;
 
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -48,7 +51,12 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.opengrok.web.api.v1.filter.CorsFilter.ALLOW_CORS_HEADER;
+import static org.opengrok.web.api.v1.filter.CorsFilter.CORS_REQUEST_HEADER;
+import static org.opengrok.web.api.v1.filter.CorsFilter.VARY_HEADER;
 
 class AnnotationControllerTest extends OGKJerseyTest {
 
@@ -61,20 +69,24 @@ class AnnotationControllerTest extends OGKJerseyTest {
 
     @Override
     protected Application configure() {
-        return new ResourceConfig(AnnotationController.class);
+        return new ResourceConfig(AnnotationController.class, CorsFilter.class);
     }
 
     @BeforeEach
     @Override
     public void setUp() throws Exception {
+        System.setProperty("sun.net.http.allowRestrictedHeaders", "true"); // necessary to test CORS from controllers
         super.setUp();
         repository = new TestRepository();
-        repository.create(HistoryGuru.class.getResource("/repositories"));
+        final URL repositoryURL = HistoryGuru.class.getResource("/repositories");
+        assertNotNull(repositoryURL);
+        repository.create(repositoryURL);
 
         env.setSourceRoot(repository.getSourceRoot());
         env.setDataRoot(repository.getDataRoot());
         env.setProjectsEnabled(true);
         env.setHistoryEnabled(true);
+        env.setAllowedOrigins(Set.of("http://example.com"));
         RepositoryFactory.initializeIgnoredNames(env);
 
         Indexer.getInstance().prepareIndexer(
@@ -95,6 +107,7 @@ class AnnotationControllerTest extends OGKJerseyTest {
         env.setProjects(new ConcurrentHashMap<>());
         env.setRepositories(new ArrayList<>());
         env.getProjectRepositoriesMap().clear();
+        env.setAllowedOrigins(Collections.emptySet());
 
         repository.destroy();
     }
@@ -120,18 +133,18 @@ class AnnotationControllerTest extends OGKJerseyTest {
                 .get(new GenericType<>() {
                 });
         assertEquals(getNumLines(new File(env.getSourceRootFile(), path)), annotations.size());
-        assertEquals("Trond Norbye", annotations.get(0).getAuthor());
+        assertEquals("Trond Norbye", annotations.getFirst().author());
         List<String> ids = annotations.stream().
-                map(AnnotationController.AnnotationDTO::getRevision).
+                map(AnnotationController.AnnotationDTO::revision).
                 collect(Collectors.toList());
         assertEquals(Arrays.asList(HASH_BB74B7E8, HASH_BB74B7E8, HASH_BB74B7E8, HASH_BB74B7E8, HASH_BB74B7E8,
                 HASH_BB74B7E8, HASH_BB74B7E8, HASH_BB74B7E8, HASH_AA35C258, HASH_AA35C258, HASH_AA35C258), ids);
         List<String> versions = annotations.stream().
-                map(AnnotationController.AnnotationDTO::getVersion).
+                map(AnnotationController.AnnotationDTO::version).
                 collect(Collectors.toList());
         assertEquals(Arrays.asList("1/2", "1/2", "1/2", "1/2", "1/2", "1/2", "1/2", "1/2", "2/2", "2/2", "2/2"),
                 versions);
-        assertTrue(annotations.get(0).getDescription().contains("sunray"));
+        assertTrue(annotations.getFirst().description().contains("sunray"));
     }
 
     @Test
@@ -144,15 +157,27 @@ class AnnotationControllerTest extends OGKJerseyTest {
                 .get(new GenericType<>() {
                 });
         assertEquals(8, annotations.size());
-        assertEquals("Trond Norbye", annotations.get(0).getAuthor());
+        assertEquals("Trond Norbye", annotations.getFirst().author());
         Set<String> ids = annotations.stream().
-                map(AnnotationController.AnnotationDTO::getRevision).
+                map(AnnotationController.AnnotationDTO::revision).
                 collect(Collectors.toSet());
         List<String> versions = annotations.stream().
-                map(AnnotationController.AnnotationDTO::getVersion).
+                map(AnnotationController.AnnotationDTO::version).
                 collect(Collectors.toList());
         assertEquals(Arrays.asList("1/1", "1/1", "1/1", "1/1", "1/1", "1/1", "1/1", "1/1"),
                 versions);
         assertEquals(Collections.singleton(HASH_BB74B7E8), ids);
+    }
+
+    @Test
+    void testAnnotationCorsDeniedOrigin() {
+        Response response = target("annotation")
+                .queryParam("path", "git/Makefile")
+                .request()
+                .header(CORS_REQUEST_HEADER, "http://denied.example.com")
+                .get();
+        assertEquals(Response.Status.OK.getStatusCode(), response.getStatus());
+        assertNull(response.getHeaderString(ALLOW_CORS_HEADER));
+        assertEquals(CORS_REQUEST_HEADER, response.getHeaderString(VARY_HEADER));
     }
 }
